# SimpleRemoter

./: .gitignore  2015Remote.sln  2019Remote.sln  BmpDifference.m  Dependencies.md  ReadMe.md  ReadMe.txt  ReadMe_EN.md  ReadMe_TW.md  history.md  使用方法.txt  使用花生壳.txt  反向代理.md
.github/: FUNDING.yml
client/: Audio.cpp  Audio.h  AudioManager.cpp  AudioManager.h  Buffer.cpp  Buffer.h  CaptureVideo.cpp  CaptureVideo.h  ClientApp.h  ClientDll.cpp  ClientDll.h  ClientDll.sln  ClientDll.vcxproj  ClientDll.vcxproj.filters  ClientDll_vs2015.vcxproj  Common.cpp  Common.h  ConPTYManager.cpp  ConPTYManager.h  CursorInfo.h  CursorInfor.cpp  CursorInfor.h  ExportFunTable.def  FileManager.cpp  FileManager.h  IOCPBase.h  IOCPClient.cpp  IOCPClient.h  IOCPKCPClient.cpp  IOCPKCPClient.h  IOCPUDPClient.cpp  IOCPUDPClient.h  KernelManager.cpp  KernelManager.h  KeyboardManager.cpp  KeyboardManager.h  Loader.cpp  LoginServer.cpp  LoginServer.h  Manager.cpp  (+65 more)
client/d3d/: d3d.h  d3dcaps.h  d3drm.h  d3drmdef.h  d3drmobj.h  d3dtypes.h  winapifamily.h  winpackagefamily.h
client/lz4/: lz4.lib
client/proxy/: ProxyManager.cpp  ProxyManager.h
client/zstd/: zstd.lib
common/: DateVerify.h  IPWhitelist.h  IniParser.h  SafeString.h  ZstdArchive.h  aes.c  aes.h  commands.h  dllRunner.h  encfuncs.h  encrypt.h  file_upload.cpp  file_upload.h  hash.h  header.h  ikcp.c  ikcp.h  iniFile.h  ip_enc.h  jconfig.h  jmorecfg.h  jpeglib.h  key.h  location.h  locker.h  logger.h  mask.h  md5.h  obfs.h  skCrypter.h  turbojpeg.h  wallet.h  zstd_wrapper.c  zstd_wrapper.h
compress/: libswresample.lib  libswresample_x64.lib  libswresample_x64d.lib
compress/jpeg/: turbojpeg_32_d.lib  turbojpeg_32_r.lib  turbojpeg_64_d.lib  turbojpeg_64_r.lib
compress/jsoncpp/: allocator.h  assertions.h  config.h  forwards.h  json.h  json_features.h  jsoncpp.lib  reader.h  value.h  version.h  writer.h
compress/libavcodec/: ac3_parser.h  adts_parser.h  avcodec.h  avdct.h  avfft.h  d3d11va.h  dirac.h  dv_profile.h  dxva2.h  jni.h  mediacodec.h  qsv.h  vaapi.h  vdpau.h  version.h  videotoolbox.h  vorbis_parser.h  xvmc.h
compress/libavutil/: adler32.h  aes.h  aes_ctr.h  attributes.h  audio_fifo.h  avassert.h  avconfig.h  avstring.h  avutil.h  base64.h  blowfish.h  bprint.h  bswap.h  buffer.h  camellia.h  cast5.h  channel_layout.h  common.h  cpu.h  crc.h  des.h  dict.h  display.h  downmix_info.h  encryption_info.h  error.h  eval.h  ffversion.h  fifo.h  file.h  frame.h  hash.h  hmac.h  hwcontext.h  hwcontext_cuda.h  hwcontext_d3d11va.h  hwcontext_drm.h  hwcontext_dxva2.h  hwcontext_mediacodec.h  hwcontext_qsv.h  (+40 more)
compress/libyuv/: libyuv.h  libyuv.lib  libyuv_x64.lib
compress/libyuv/libyuv/: basic_types.h  compare.h  compare_row.h  convert.h  convert_argb.h  convert_from.h  convert_from_argb.h  cpu_id.h  cpu_support.h  loongson_intrinsics.h  macros_msa.h  mjpeg_decoder.h  planar_functions.h  rotate.h  rotate_argb.h  rotate_row.h  row.h  row_sve.h  scale.h  scale_argb.h  scale_rgb.h  scale_row.h  scale_uv.h  version.h  video_common.h
compress/opus/: opus.lib  opus_wrapper.h  opus_x64.lib
compress/x264/: x264.h  x264_config.h
compress/zlib/: zconf.h  zlib.h  zlib.lib  zlib_x64.lib
compress/zstd/: zdict.h  zstd.h  zstd.lib  zstd_errors.h  zstd_x64.lib
docs/: CustomCursor_Design.md  FILE_TRANSFER_V2.md  FileTransferV2_Plan.md  MultiLayerLicense.md  NotifyFeature_Design.md  TestPlan.md  TestingArchitecture.md
lib/: FileUpload_Lib.lib  FileUpload_Libd.lib  FileUpload_Libx64.lib  FileUpload_Libx64d.lib  PrivateDesktop_Lib.lib  PrivateDesktop_Libd.lib  PrivateDesktop_Libx64.lib  PrivateDesktop_Libx64d.lib  ReadMe.md  clip.lib  clip_x64.lib  clip_x64D.lib  clipd.lib  shrink.lib  shrink_x64.lib
linux/: CMakeLists.txt  ClipboardHandler.h  FileManager.h  FileTransferV2.h  LinuxConfig.h  README.md  ScreenHandler.h  SystemManager.h  main.cpp
server/: 2015Remote.sln
server/2015Remote/: 2015Remote.cpp  2015Remote.h  2015Remote.rc  2015Remote.vcxproj  2015Remote.vcxproj.filters  2015RemoteDlg.cpp  2015RemoteDlg.h  2015Remote_vs2015.vcxproj  2015Remote_vs2015.vcxproj.filters  Audio.cpp  Audio.h  AudioDlg.cpp  AudioDlg.h  Bmp2Video.cpp  Bmp2Video.h  Buffer.cpp  Buffer.h  BuildDlg.cpp  BuildDlg.h  CClientListDlg.cpp  CClientListDlg.h  CDlgFileSend.cpp  CDlgFileSend.h  CDrawingBoard.cpp  CDrawingBoard.h  CGridDialog.cpp  CGridDialog.h  CIconButton.cpp  CIconButton.h  CLicenseDlg.cpp  CLicenseDlg.h  CListCtrlEx.cpp  CListCtrlEx.h  CPasswordDlg.cpp  CPasswordDlg.h  CRcEditDlg.cpp  CRcEditDlg.h  CTextDlg.cpp  CTextDlg.h  CUpdateDlg.cpp  (+91 more)
server/2015Remote/file/: CFileListCtrl.cpp  CFileListCtrl.h  CFileManagerDlg.cpp  CFileManagerDlg.h  CFileTransferModeDlg.cpp  CFileTransferModeDlg.h
server/2015Remote/jsoncpp/: jsoncpp_x64.lib
server/2015Remote/lang/: en_US.ini  zh_TW.ini
server/2015Remote/libpeconv/: libpeconv_x64.lib  peconv.h
server/2015Remote/proxy/: HPSocket.h  HPTypeDef.h  ProxyConnectServer.cpp  ProxyConnectServer.h  ProxyMapDlg.cpp  ProxyMapDlg.h  SocketInterface.h
server/2015Remote/res/: 1.cur  2.cur  My2015Remote.rc2  arrow.cur  dot.cur  gh0st.rc2
server/2015Remote/sys/: CCreateTaskDlg.cpp  CCreateTaskDlg.h  CInjectCodeDlg.cpp  CInjectCodeDlg.h  MachineDlg.cpp  MachineDlg.h  ServiceInfoDlg.cpp  ServiceInfoDlg.h
server/go/: Makefile  README.md  go.mod  go.sum
server/go/auth/: auth.go
server/go/buffer/: buffer.go
server/go/cmd/: main.go
server/go/connection/: context.go  errors.go  manager.go
server/go/logger/: logger.go
server/执行代码/: ReadMe.md  main.cpp  执行代码.vcxproj
test/: CMakeLists.txt  IniParser_test.cpp  TestCompareBitmap.cpp  test.bat
test/unit/auth/: DateVerifyTest.cpp
test/unit/client/: BufferTest.cpp
test/unit/file/: ChunkManagerTest.cpp  FileTransferV2Test.cpp  ResumeStateTest.cpp  SHA256VerifyTest.cpp
test/unit/network/: HeaderTest.cpp  HttpMaskTest.cpp  PacketFragmentTest.cpp
test/unit/protocol/: PacketTest.cpp  PathUtilsTest.cpp
test/unit/screen/: DiffAlgorithmTest.cpp  QualityAdaptiveTest.cpp  RGB565Test.cpp  ScrollDetectorTest.cpp
test/unit/server/: BufferTest.cpp
(+35 files in other folders)
